# data-engineer-exam

./: .gitignore  pyproject.toml  requirements.txt
exam1/: algorithm.py  detector.py  lab.ipynb
exam1/data/time-series/: real_1.csv  real_10.csv  real_11.csv  real_12.csv  real_13.csv  real_14.csv  real_15.csv  real_16.csv  real_17.csv  real_18.csv  real_19.csv  real_2.csv  real_20.csv  real_21.csv  real_22.csv  real_23.csv  real_24.csv  real_25.csv  real_26.csv  real_27.csv  real_28.csv  real_29.csv  real_3.csv  real_30.csv  real_31.csv  real_32.csv  real_34.csv  real_35.csv  real_36.csv  real_37.csv  real_38.csv  real_39.csv  real_4.csv  real_40.csv  real_41.csv  real_42.csv  real_43.csv  real_44.csv  real_45.csv  real_46.csv  (+24 more)
exam2/: lab-Copy1.ipynb  lab.ipynb  main.py
exam2/result/: test.csv  train.csv
exam3/: lab.ipynb  model  model.py  onehotencoder.pkl  predict.py  train.py
exam3/model/: model
exam3/result/: predict.csv
